--- a/animal.html
+++ b/animal.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>나만의 동물원 홈페이지</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -16,14 +17,29 @@
             <li>호랑이</li>
             <li>기린</li>
             <li>코끼리</li>
+            <li>사자</li>
+            <li>판다</li>
         </ul>
     </section>
 
     <section>
+        <h2>동물 소개</h2>
+        <p><strong>호랑이</strong>는 숲 속의 왕으로 불리며, 빠른 속도와 강력한 힘을 자랑합니다.</p>
+        <p><strong>기린</strong>은 길게 뻗은 목이 특징이며, 높이 있는 나뭇잎을 먹습니다.</p>
+        <p><strong>코끼리</strong>는 큰 귀와 긴 코를 가진, 무리를 지어 생활하는 지혜로운 동물입니다.</p>
+        <p><strong>사자</strong>는 용맹함의 상징으로, 아프리카 평원의 대표적인 포식자입니다.</p>
+        <p><strong>판다</strong>는 귀여운 외모와 대나무를 주식으로 하는 습성으로 사랑받습니다.</p>
+    </section>
+
+    <section>
         <h2>동물 그림</h2>
-        <img src="https://example.com/tiger.jpg" alt="호랑이" width="300">
-        <img src="https://example.com/giraffe.jpg" alt="기린" width="300">
-        <img src="https://example.com/elephant.jpg" alt="코끼리" width="300">
+        <div class="gallery">
+            <img src="https://example.com/tiger.jpg" alt="호랑이">
+            <img src="https://example.com/giraffe.jpg" alt="기린">
+            <img src="https://example.com/elephant.jpg" alt="코끼리">
+            <img src="https://example.com/lion.jpg" alt="사자">
+            <img src="https://example.com/panda.jpg" alt="판다">
+        </div>
     </section>
 
     <footer>
